<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/title"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/img_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>

        <TextView
                android:id="@+id/txt_hay_di"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_16dp"
                android:layout_marginTop="@dimen/padding_16dp"
                android:text="@string/name_app"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_24sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_hay_di"
                android:layout_marginStart="@dimen/padding_16dp"
                android:text="@string/text_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_24sp"
                android:textStyle="bold"/>
    </RelativeLayout>
    <!-- Text -->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_24dp"
            android:paddingTop="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_24dp">


        <!--android:duplicateParentState="true"-->
        <EditText
                android:text="0868852102"
                android:id="@+id/edt_phone_login"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/text_so_dien_thoai"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingTop="@dimen/size_14_dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/size_14_dp"
                android:textStyle="italic"
                tools:ignore="TextFields"/>


        <!--android:duplicateParentState="true"-->
        <com.google.android.material.textfield.TextInputEditText
                android:text="dung123"
                android:id="@+id/edt_password_login"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_phone_login"
                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/text_mat_khau"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingTop="@dimen/size_14_dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/size_14_dp"
                android:textColorHighlight="@color/blule"
                android:textStyle="italic"/>


        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_box_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password_login"
                android:layout_marginTop="@dimen/padding_16dp"
                android:checked="false"
                android:text="@string/text_checkbox"
                android:textColor="@color/brown"
                android:textStyle="italic"
                app:buttonTint="@color/blule"/>

        <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password_login"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/size_22_dp"
                android:text="@string/text_quen_mat_khau"
                android:textColor="@color/blule"/>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/check_box_login"
                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/shape_buttom_blue"
                android:text="@string/text_buttom_login"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txt_b_c_c_t_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="@dimen/size_22_dp"
                android:paddingStart="70dp"
                android:text="@string/text_b_c_c_t_k"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry"/>

        <TextView
                android:id="@+id/btn_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_marginStart="@dimen/size_4_dp"
                android:layout_marginTop="@dimen/size_22_dp"
                android:layout_toEndOf="@id/txt_b_c_c_t_k"
                android:text="@string/btn_register_login"
                android:textColor="@color/blule"/>

    </RelativeLayout>


</LinearLayout>