<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/title"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/img_title_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            <TextView
                    android:id="@+id/txt_hay_di"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_16dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:text="@string/name_app"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_hay_di"
                    android:layout_marginStart="@dimen/padding_16dp"
                    android:text="@string/text_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />
        </RelativeLayout>
        <!-- Text -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_24dp"
            android:paddingTop="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_24dp">

            <!--android:duplicateParentState="true"-->
            <EditText
                android:id="@+id/edt_name_register"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/txt_my_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingTop="@dimen/size_14_dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/size_14_dp"
                android:textStyle="italic" />


            <!--android:duplicateParentState="true"-->
            <EditText
                android:id="@+id/edt_password_register"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_name_register"
                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/text_mat_khau"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingTop="@dimen/size_14_dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/size_14_dp"
                android:textStyle="italic" />


            <!--android:duplicateParentState="true"-->
            <EditText

                android:id="@+id/edt_email_register"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password_register"
                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/text_my_eamil"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingTop="@dimen/size_14_dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/size_14_dp"
                android:textStyle="italic" />

            <!-- wqwq1122-->
            <LinearLayout

                android:id="@+id/txt_input_layout_phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_address"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                app:counterMaxLength="25"
                app:passwordToggleEnabled="true">

                <TextView
                    android:id="@+id/txt_code_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:background="@drawable/shape_input_text"
                    android:paddingStart="32dp"
                    android:paddingTop="@dimen/size_14_dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="@dimen/size_14_dp"
                    android:text="+00"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_14_dp"
                    android:textStyle="bold"
                    tools:ignore="NotSibling,SpUsage" />

                <!--android:duplicateParentState="true"-->
                <EditText
                    android:id="@+id/edt_phone_register"
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:background="@drawable/shape_input_text"
                    android:hint="@string/txt_phone_login"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingStart="@dimen/padding_16dp"
                    android:paddingTop="@dimen/size_14_dp"
                    android:paddingEnd="@dimen/padding_16dp"
                    android:paddingBottom="@dimen/size_14_dp"
                    android:textStyle="italic"
                    tools:ignore="TextFields" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_address"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_email_register"
                android:layout_marginTop="@dimen/padding_16dp"
                android:background="@drawable/shape_input_text"
                android:hint="@string/txt_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingTop="@dimen/size_14_dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/size_14_dp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/txt_input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_input_layout_phone_register"
                android:layout_marginTop="@dimen/size_10_dp"
                android:background="@drawable/shape_input_text"
                android:gravity="center">


                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="@dimen/padding_24dp"
                    android:layout_marginBottom="1dp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_box_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_input_country"
                android:layout_marginTop="@dimen/size_10_dp"
                android:checked="false"
                android:text="@string/text_checkbox_register"
                android:textColor="@color/brown"
                android:textStyle="italic"
                app:buttonTint="@color/blule" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/check_box_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/shape_buttom_blue"
                android:text="@string/text_resgister_buttom"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_back_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_register"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/size_4_dp"
                android:layout_marginTop="@dimen/size_22_dp"
                android:text="@string/text_login_register"
                android:textColor="@color/blule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_register"
                android:layout_marginTop="@dimen/size_22_dp"
                android:layout_marginBottom="@dimen/size_22_dp"
                android:layout_toStartOf="@id/btn_back_login"
                android:text="@string/text_back_login"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>